--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<header class="navbar navbar-default navbar-fixed-top">
 	        <div class="container">
 	            <div class="navbar-header">
-	                <a class="navbar-brand" href="index.html"><img src="images/logo-header.png" alt="logo"></a>
+	                <a class="navbar-brand" href="index.html"><img src="images/new-logo.jpeg" alt="logo"></a>
 					<label class="hamburger">
 						<span></span>
 						<span></span>
@@ -32,10 +32,10 @@
 	            </div>
 	            <!--<nav id="bs-navbar" class="collapse navbar-collapse">-->
 	                <ul class="nav navbar-nav menu navbar-right">
-						<li><a href="#howToWork" style="font-family: 'Open Sans', sans-serif !important;">How it Works</a></li>
-						<li><a href="#aboutUs" style="font-family: 'Open Sans', sans-serif !important;">About the Game</a></li>
+						<li><a href="#howToWork" style="font-family: 'Open Sans', sans-serif !important;">Working Committe</a></li>
+						<li><a href="#aboutUs" style="font-family: 'Open Sans', sans-serif !important;">Game Fixture</a></li>
 						<!-- <li><a href="#leagues" style="font-family: 'Open Sans', sans-serif !important;">Leagues</a></li> -->
-						<li><a href="#gameBenefits" style="font-family: 'Open Sans', sans-serif !important;">Benefits</a></li>
+						<li><a href="#gameBenefits" style="font-family: 'Open Sans', sans-serif !important;">Prizes</a></li>
 						<li><a href="#gameFaq" style="font-family: 'Open Sans', sans-serif !important;">FAQ</a></li>
 					</ul>
 	            <!--</nav>-->
@@ -52,9 +52,9 @@
   								</button>
 							</a>
 						</div>
-						<div class="col-sm-12 cricket-padding-remove cricket-logo-shadow">
+						<!-- <div class="col-sm-12 cricket-padding-remove cricket-logo-shadow">
 							<img src="images/logo-shadow-1200px.png" alt="logo">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -62,44 +62,38 @@
 		<section class="cricket-howtowork" id="howToWork">
 			<div class="container">
 				<div class="cl-sm-12 cricket-howtowork-header">
-					<h1><strong>HOW IT WORKS</strong></h1>
+					<h1><strong>Working Commitee</strong></h1>
 				</div>
 				<div class="cl-sm-12 cricket-howtowork-section">
 					<div class="col-md-4 col-sm-12 cricket-howtowork-section-player">
 						<div class="col-sm-12">
 							<div class="cricket-player-width">
-								<img src="images/player.png">
+								<img src="images/chandan.jfif">
 							</div>
 						</div>
-						<h3 style="">PLAYERS</h3>
+						<h3>CHANDAN DUBEY</h3>
 						<ul>
-							<li>Begin with 10 CrickCoins and an 8-card deck.</li>
-							<li>Join battles to win experience and reputation.</li>
-							<li>Upgrade your cards based on activity (e.g., game participation, win/loss).</li>
-							<li>Build a deck or buy one suitable for your strategy and playstyle.</li>
-							<li>Join free tournaments and win to earn CrickCoins.</li>
-							<li>Rise to the top of the leaderboards and get drafted by team owners to play on their behalf.</li>
-							<li>Earn Gol Coins from weekly contracts; by selling cards/decks; or&nbsp;by sellingl upgraded cards via the Auction House.</li>
-							<li>Exchange Gol Coins for real money whenever you want to leave the ecosystem.</li>
-							<li>Withdrawal requires 10 Gol coins minimum and is only allowed once a week.</li>
+							<li>Chartered accontant</li>
+							<li>Bussiness analyst</li>
+							<li>Batsman</li>
+							<li>Bowler.</li>
+							<li>Freelancer.</li>
+							
 						</ul>					
 					</div>
 					<div class="col-md-4 col-sm-12 cricket-howtowork-section-player">
 						<div class="col-sm-12">
 							<div class="cricket-player-width">
-								<img src="images/tournament.png">
+								<img src="images/john-cena.png">
 							</div>
 						</div>
-						<h3>TOURNAMENTS</h3>
+						<h3>JOHN CENA</h3>
 						<ul>
-							<li>Players drafted into teams play all games exclusively on behalf of their team.</li>
-							<li>Tournaments always involve team vs. team play.</li>
-							<li>The most active teams have the highest chance of winning.</li>
-							<li>Scores are calculated for the team as a whole.</li>
-							<li>Top teams win prizes.</li>
-							<li>25+ types of tournaments are available.</li>
-							<li>Players cannot enter into team tournaments.</li>
-							<li>One free tournament is available per week.</li>
+							<li>Chartered accontant</li>
+							<li>Bussiness analyst</li>
+							<li>Batsman</li>
+							<li>Bowler.</li>
+							<li>Freelancer.</li>
 						</ul>
 						<div class="col-sm-12">
 							<div class="cricket-player-winner">
@@ -110,21 +104,16 @@
 					<div class="col-md-4  col-sm-12 cricket-howtowork-section-player">
 						<div class="col-sm-12">
 							<div class="cricket-player-width">
-								<img src="images/owners.png">
+								<img src="images/roman-rein.png">
 							</div>
 						</div>
-						<h3>OWNERS</h3>
+						<h3>ROMAN REIGN</h3>
 						<ul>
-							<li>Join a Silver ($100), Gold ($1,000) or Platinum ($5,000) league.</li>
-							<li>Get Gol Coins, CrickCoins, and free tournament entries based on your league.</li>
-							<li>Track player performance and build your weekly team by offering paid contracts.</li>
-							<li>Enter tournaments to win Gol Coins and CrickCoins.</li>
-							<li>Share the spoils with your team if you wish.</li>
-							<li>Free and paid tournaments run all year round.</li>
-							<li>Tournament entry is restricted based on league.</li>
-							<li>Join 25+ types of tournaments with a different strategy for each.</li>
-							<!--<li>Earn 20% from each team member’s tournament winnings.</li>-->
-							<li>Convert Gol Coins to real money when you decide to leave the ecosystem.</li>
+							<li>Chartered accontant</li>
+							<li>Bussiness analyst</li>
+							<li>Batsman</li>
+							<li>Bowler.</li>
+							<li>Freelancer.</li>
 						</ul>
 					</div>
 				</div>
@@ -140,20 +129,20 @@
 					</div>
 					<div class="col-md-8 col-sm-12 cricket-about-us-mobile-content">
 						<div class="col-sm-12 cricket-about-us-content cricket-padding-remove">
-							<h1 style=""><strong>ABOUT THE GAME</strong></h1>
-							<p>Crypto Cricket is a mobile game developed and published by GoLive Games that combines the best of both worlds: one of the world’s favorite sports (cricket) and the leading edge of digital currency (cryptocurrency).</p>
+							<h1><strong>ABOUT THE GAME</strong></h1>
+							<p>This is a annual tournament held by asansol trimurty club at loco Ground</p>
 							<p>Description:</p>
 							<ul>
-								<li>A unique digital card game created by GoLive</li>
-								<li>A Turn Based Multiplayer Strategy game pitting Cricket fans and their strategies against one another</li>
-								<li>Players upgrade cards and participate in tournaments to win real world rewards</li>
+								<li>Only Local Asansol Players</li>
+								<li>Must Have thier unique T-shirt</li>
+								<li>Play by rules ,its just a game so play like it.</li>
 							</ul>
 							<p>Key Features:</p>
 							<ul>
-								<li>Blockchain enabled card collecting and trading game on Cricket</li>
-								<li>1000’s of real users to complete against</li>
-								<li>Play with friends in the Net Practice mode</li>
-								<li>Sell/Trade cards for real money rewards in the Auction House</li>
+								<li>Sachin Tendulkar will play for our club</li>
+								<li>One on one mentorship from MS DHONI</li>
+								<li>Heavy Prizes to be distributed</li>
+								<li>Certificates are provided for winners</li>
 							</ul>
 						</div>
 					</div>
@@ -547,15 +536,15 @@
 				<div class="col-sm-12 cricket-padding-remove cricket-footer-container">
 					<div class="col-md-4 col-sm-6 col-xs-12 cricket-padding-remove">
 						<div class="col-sm-12 cricket-padding-remove cricket-footer-textwidget">
-							<p><a href="http://golive.games/"><img class="alignnone wp-image-4064 size-full" src="images/GoLive-logo.png" alt="" width="154" height="60"></a></p>
-							<p>GoLive Games is the world’s favourite game publisher of casual and mid-core games.</p>
-							<p><a>info@golive.games</a></p>
+							<p><a href="http://golive.games/"><img class="alignnone wp-image-4064 size-full" src="images/new-logo.jpeg" alt="" width="154" height="60"></a></p>
+							<p>Asansol Primier leauge is biggest leaugue in asansol.</p>
+							<p><a>info@apl.games</a></p>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 cricket-padding-remove">
 						<div class="col-sm-12 cricket-padding-remove cricket-footer-textwidget padding-bottom-100-px">
-							<h4>Switzerland</h4>
-							<p class="fadd">GoLive Games Studios AG, Baarerstrasse 8, 6300 Zug.</p>
+							<h4>Asansol</h4>
+							<p class="fadd">Kumarpur, carew-gate, asansol-04.</p>
 						</div>
 					</div>
 					<!-- <div class="col-md-3 col-sm-6 col-xs-12 cricket-padding-remove">
@@ -567,10 +556,10 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 cricket-padding-remove">
 						<div class="col-sm-12 cricket-padding-remove cricket-footer-list">
 							<ul class="cricket-footer-menu-list">
-								<li><a href="#howToWork">How it Works</a></li>
-								<li><a href="#aboutUs">About the Game</a></li>
+								<li><a href="#howToWork">Working Comitte</a></li>
+								<li><a href="#aboutUs">Game Fixture</a></li>
 								<!-- <li><a href="#leagues">Leagues</a></li> -->
-								<li><a href="#gameBenefits">Benefits</a></li>
+								<li><a href="#gameBenefits">Prizes</a></li>
 								<li><a href="#gameFaq">FAQ</a></li>
 								<li><a href="register.html">Register</a></li>
 							</ul>
@@ -580,7 +569,7 @@
 			</div>
 			<section class="col-sm-12 cricket-padding-remove cricket-sub-footer">
 				<div class="container cricket-padding-remove">
-					<div class="cricket-footer-info">©2018 GoLive Games</div>
+					<div class="cricket-footer-info">©Rahul Mishra</div>
 				</div>
 			</section>
 		</footer>
