--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
 		<header class="navbar navbar-default navbar-fixed-top">
 	        <div class="container">
 	            <div class="navbar-header">
-	                <a class="navbar-brand" href="index.html"><img src="images/logo-header.png" alt="logo"></a>
+	                <a class="navbar-brand" href="index.html"><img src="images/new-logo3.jpeg" alt="logo"></a>
 					<label class="hamburger">
 						<span></span>
 						<span></span>
