--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<header class="navbar navbar-default navbar-fixed-top">
 	        <div class="container">
 	            <div class="navbar-header">
-	                <a class="navbar-brand" href="index.html"><img src="images/new-logo.jpeg" alt="logo"></a>
+	                <a class="navbar-brand logo" href="index.html"><img src="images/Untitled-1.png" alt="logo"></a>
 					<label class="hamburger">
 						<span></span>
 						<span></span>
